new: icon + window title customization